expo.log
+ exec gosu vibecode node node_modules/.bin/expo start --localhost
env: load .env
env: export EXPO_PUBLIC_VIBECODE_OPENAI_API_KEY EXPO_PUBLIC_VIBECODE_ANTHROPIC_API_KEY EXPO_PUBLIC_VIBECODE_GROK_API_KEY EXPO_PUBLIC_VIBECODE_GOOGLE_API_KEY EXPO_PUBLIC_VIBECODE_ELEVENLABS_API_KEY
Starting project at /home/user/workspace
Starting Metro Bundler
Waiting on http://localhost:8081
Logs for your project will appear below.
iOS ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 1278ms index.ts (1879 modules)
iOS Bundled 806ms index.ts (1943 modules)
 WARN  The provided Linking scheme 'exp' does not appear in the list of possible URI schemes in your Expo config. Expected one of: 'vibecode', 'com.vibecodeapp.app'
 WARN  [expo-av]: Expo AV has been deprecated and will be removed in SDK 54. Please use the `expo-audio` and `expo-video` packages to replace the required functionality.
 LOG  [index] Project ID is:  0199bbde-61be-725f-8b7a-b6d873c51eff
iOS ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 78ms index.ts (1 module)
 WARN  The provided Linking scheme 'exp' does not appear in the list of possible URI schemes in your Expo config. Expected one of: 'vibecode', 'com.vibecodeapp.app'
 WARN  [expo-av]: Expo AV has been deprecated and will be removed in SDK 54. Please use the `expo-audio` and `expo-video` packages to replace the required functionality.
 LOG  [index] Project ID is:  0199bbde-61be-725f-8b7a-b6d873c51eff
 ERROR  SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (892:6)

  890 |           </TouchableWithoutFeedback>
  891 |         </View>
> 892 |       </Modal>
      |       ^
  893 |
  894 |       {/* Add/Edit Tolerance Modal */}
  895 |       <Modal visible={showToleranceModal} animationType="slide" transparent>
 ERROR  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (892:6)

[0m [90m 890 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 891 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 892 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m     |[39m       [31m[1m^[22m[39m
 [90m 893 |[39m
 [90m 894 |[39m       {[90m/* Add/Edit Tolerance Modal */[39m}
 [90m 895 |[39m       [33m<[39m[33mModal[39m visible[33m=[39m{showToleranceModal} animationType[33m=[39m[32m"slide"[39m transparent[33m>[39m[0m]
 LOG  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (892:6)

[0m [90m 890 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 891 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 892 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m     |[39m       [31m[1m^[22m[39m
 [90m 893 |[39m
 [90m 894 |[39m       {[90m/* Add/Edit Tolerance Modal */[39m}
 [90m 895 |[39m       [33m<[39m[33mModal[39m visible[33m=[39m{showToleranceModal} animationType[33m=[39m[32m"slide"[39m transparent[33m>[39m[0m]
 ERROR  SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1021:6)

  1019 |           </TouchableWithoutFeedback>
  1020 |         </View>
> 1021 |       </Modal>
       |       ^
  1022 |
  1023 |       {/* Add/Edit Sub-Product Modal */}
  1024 |       <Modal visible={showSubProductModal} animationType="slide" transparent>
 ERROR  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1021:6)

[0m [90m 1019 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 1020 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 1021 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m      |[39m       [31m[1m^[22m[39m
 [90m 1022 |[39m
 [90m 1023 |[39m       {[90m/* Add/Edit Sub-Product Modal */[39m}
 [90m 1024 |[39m       [33m<[39m[33mModal[39m visible[33m=[39m{showSubProductModal} animationType[33m=[39m[32m"slide"[39m transparent[33m>[39m[0m]
 LOG  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1021:6)

[0m [90m 1019 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 1020 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 1021 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m      |[39m       [31m[1m^[22m[39m
 [90m 1022 |[39m
 [90m 1023 |[39m       {[90m/* Add/Edit Sub-Product Modal */[39m}
 [90m 1024 |[39m       [33m<[39m[33mModal[39m visible[33m=[39m{showSubProductModal} animationType[33m=[39m[32m"slide"[39m transparent[33m>[39m[0m]
 ERROR  SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1329:6)

  1327 |           </TouchableWithoutFeedback>
  1328 |         </View>
> 1329 |       </Modal>
       |       ^
  1330 |     </SafeAreaView>
  1331 |   );
  1332 | }
 ERROR  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1329:6)

[0m [90m 1327 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 1328 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 1329 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m      |[39m       [31m[1m^[22m[39m
 [90m 1330 |[39m     [33m<[39m[33m/[39m[33mSafeAreaView[39m[33m>[39m
 [90m 1331 |[39m   )[33m;[39m
 [90m 1332 |[39m }[0m]
 LOG  [Error: TransformError SyntaxError: /home/user/workspace/src/screens/ProductLibraryScreen.tsx: Expected corresponding JSX closing tag for <KeyboardAvoidingView>. (1329:6)

[0m [90m 1327 |[39m           [33m<[39m[33m/[39m[33mTouchableWithoutFeedback[39m[33m>[39m
 [90m 1328 |[39m         [33m<[39m[33m/[39m[33mView[39m[33m>[39m
[31m[1m>[22m[39m[90m 1329 |[39m       [33m<[39m[33m/[39m[33mModal[39m[33m>[39m
 [90m      |[39m       [31m[1m^[22m[39m
 [90m 1330 |[39m     [33m<[39m[33m/[39m[33mSafeAreaView[39m[33m>[39m
 [90m 1331 |[39m   )[33m;[39m
 [90m 1332 |[39m }[0m]
